--- a/website/profile page/profile.html
+++ b/website/profile page/profile.html
@@ -10,7 +10,7 @@
 		<a style='color: white; font-size: 25px'>
 			Pause
 		</a>
-		<a style='float:right; color:white ;font-size: 20px'''>
+		<a href="#" style='float:right; color:white ;font-size: 20px; text-decoration:none'>
 			Sign Out</a> 
 	</div>
 	<div id='profileImage'>
@@ -26,9 +26,23 @@
 		</div>
 	</div>
 	<div id='watching'>
-		<div id='boxname'>
+		<div id='boxname2'>
 			<h3> Watching </h3>
 		</div>
+		<div id='fmovie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
 	</div>
 	<div id='recommendation'>
 		<div id='boxname'>
@@ -39,6 +53,13 @@
 		<div id='boxname'>
 			<h3> Watched </h3>
 		</div>
+		<div id='fmovie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+		<div id='movie'></div>
+
+
 	</div>
 	<!--<div id='profileImage'></div>-->
 	</div>
