Sign in using ID
Changed for debugging

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -41,7 +41,7 @@
         </a>
       </li>
       <li class="list-inline-item">
-        <a href="#" class="btn btn-secondary " onclick="signIn2();" >
+        <a href="#" class="btn btn-secondary " id="facebookLogin" >
           <i class="fa fa-facebook fa-fw"></i>
           <span class="network-name">Facebook</span>
         </a>
