--- a/chrome_extension/options.html
+++ b/chrome_extension/options.html
@@ -28,24 +28,12 @@
 </head>
 
 <body>
-
+<!-- Login with Google -->
   <div class="intro-message">
     <h1>Pause</h1>
     <h6>Automatically track what you're watching.</h6>
     <hr class="intro-divider">
     <ul class="list-inline intro-social-buttons">
-      <li class="list-inline-item">
-        <a href="#" class="btn btn-secondary " onclick="signIn3();">
-          <i class="fa fa-twitter"></i>
-          <span class="network-name">Twitter</span>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a href="#" class="btn btn-secondary " onclick="signIn2();" >
-          <i class="fa fa-facebook fa-fw"></i>
-          <span class="network-name">Facebook</span>
-        </a>
-      </li>
       <li class="list-inline-item">
         <a href="#" class="btn btn-secondary " onclick="signIn();">
           <i class="fa fa-google fa-fw"></i>
